exports[`test render should render component 1`] = `
<article>
  <Section
    section={
      Object {
        "components": Array [],
        "content": Array [
          Object {
            "content": "<button>OK</button>",
            "evalInContext": [Function],
            "type": "code",
          },
        ],
        "name": "Foo",
      }
    } />
  <Section
    section={
      Object {
        "components": Array [],
        "content": Array [
          Object {
            "content": "Hello *world*!",
            "type": "markdown",
          },
        ],
        "name": "Bar",
      }
    } />
  <Section
    section={
      Object {
        "sections": Array [
          Object {
            "content": Array [],
            "name": "One",
          },
          Object {
            "content": Array [],
            "name": "Two",
          },
        ],
      }
    } />
</article>
`;

exports[`test should render component renderer 1`] = `
<SectionsRenderer>
  <Section
    section={
      Object {
        "components": Array [],
        "content": Array [
          Object {
            "content": "<button>OK</button>",
            "evalInContext": [Function],
            "type": "code",
          },
        ],
        "name": "Foo",
      }
    } />
  <Section
    section={
      Object {
        "components": Array [],
        "content": Array [
          Object {
            "content": "Hello *world*!",
            "type": "markdown",
          },
        ],
        "name": "Bar",
      }
    } />
  <Section
    section={
      Object {
        "sections": Array [
          Object {
            "content": Array [],
            "name": "One",
          },
          Object {
            "content": Array [],
            "name": "Two",
          },
        ],
      }
    } />
</SectionsRenderer>
`;
